Use Path.of() rather than Paths.get()